# pinry

./: .bowerrc  .dockerignore  .env  .flake8  .gitignore  .travis.yml  404.html  CNAME  CONTRIBUTORS  CONTRIBUTORS.md  CONTRIBUTORS.rst  Dockerfile  Dockerfile.autobuild  LICENSE  LICENSE.md  Makefile  Pipfile  README.md  README.rst  SECURITY.md  Test.py  bootstrap.py  bower.json  buildout.cfg  docker-compose.example.yml  docker-compose.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  start_docker_with_current_user.sh
api/: index.html
assets/: index.html
conf/: nginx.conf  uwsgi.ini
contributing/: index.html
core/: admin.py  api.py  apps.py  context_processors.py  drf_api.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
development/: index.html
django_images/: admin.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
doc/: upgrade_from_1.x.md
docker/: CONTRIBUTORS.rst  README.rst  bootstrap.sh  build_docker.sh  build_docker_multiple_platform.sh  docker-compose.example.yml  fix_docker_buildx.sh  pip.conf  start_docker.sh
docker-contents/: LICENSE.rst  README.rst  bootstrap.sh  build_docker.sh
docs/: Makefile  basic_customization.rst  conf.py  deployment.rst  getting_started.rst  index.html  index.rst  running_on.rst
extensions/: index.html
install-with-docker/: index.html
license/: index.html
passwords/: index.html
pinry/: middleware.py  settings.py  (+2 more)
pinry-spa/: .eslintrc.js  README.md  package.json  pnpm-lock.yaml  vue.config.js
(+246 files in other folders)
